@@ -1,3 +1,7 @@
+Mon Feb 16 21:12:21 MST 2009
+	 Moved MHD_get_connection_info so that it is always defined,
+	 even if HTTPS support is not enabled. -CG
+
 Sun Feb  8 21:15:30 MST 2009
 	 Releasing libmicrohttpd 0.4.0. -CG
 
